--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 
 .components-list {
   margin: 10px;
+  padding: 10px;
   list-style: none;
   display: flex;
   flex-direction: row;
@@ -31,6 +32,8 @@
 .wrap li {
   background: green;
   margin: 4px;
+  padding: 10px;
+  font-size: 1.3em;
 }
 
 .foodItem {
