--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
   font-size: 1.3em;
 }
 
+img {
+  width:  300px;
+  height: 300px;
+  object-fit: cover;
+}
+
 .footer {
 position: fixed;
 left: 0%;
