--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,18 @@ background-color: #394a51;
 color: #394a51;
 }
 
+.new_recipe_food {
+  font-size: 2em;
+}
+
+.new_recipe_food:link {
+  text-decoration: wavy;
+}
+
+.new_recipe_food:hover {
+  text-decoration: underline;
+}
+
 .components-list {
   padding: 10px;
   list-style: none;
@@ -73,6 +85,19 @@ color: #394a51;
   font-weight: bold;
   font-size: 2em;
   text-align: center; */
+}
+
+.recipe_lists {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.individual_recipe_lists {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5%;
 }
 
 .inputBox {
