--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,16 @@ code {
   background-color: #394a51;
 }
 
+/* *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: montserrat, sans-serif;
+}
 
+input, button{
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+} */
