--- a/src/App.css
+++ b/src/App.css
@@ -198,12 +198,12 @@ font-size: 2em;
   margin: 1%;
 }
 
-/* form{
+form{
   display: block;
   position: relative;
 }
 
-form::after {
+/* form::after {
   content: '';
   display: block;
   position: absolute;
@@ -213,7 +213,7 @@ form::after {
   bottom: -5px;
   z-index: 1;
   background-image: linear-gradient(to bottom right, #FFCE00, #FE4880);
-}
+} */
 
 form .form-inner {
   position: relative;
@@ -273,7 +273,7 @@ form .form-inner .form-group input[type="submit"] {
   background-position: 0%;
   transition: 0.4s;
   color: #FFF;
-} */
+}
 
 
 
