--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   list-style: none;
   margin: 0;
-  padding: 0%;
+  padding: 10px;
   background-color: white;
 }
 
@@ -32,8 +32,6 @@ img {
   height: 300px;
   object-fit: cover;
 }
-
-
 
 .footer {
 position: fixed;
@@ -279,6 +277,13 @@ form .form-inner .form-group input[type="submit"] {
   background-position: 0%;
   transition: 0.4s;
   color: #FFF;
+}
+
+.new_recipe_food {
+  font-size: 1.2em;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 18px;
 }
 
 
