added logo changing thing and multiple of one ingredient

--- a/src/containers/HomeCon.css
+++ b/src/containers/HomeCon.css
@@ -246,3 +246,14 @@ footer {
     margin: 10px 0;
 }
 
+.appName {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    color: red;
+    font-size: 2em;
+}
+
+
+
+
