--- a/src/App.css
+++ b/src/App.css
@@ -321,9 +321,16 @@ form .form-inner .form-group input[type="submit"] {
   font-family: cursive;
 }
 
+
+
 a.nav.item:hover {
   background: #1B1C1D;
   color: #17AA1C;
+  font-size: 1em;
+}
+
+.link {
+  font-size: 2em;
 }
 
 
