--- a/src/App.css
+++ b/src/App.css
@@ -318,6 +318,8 @@ form .form-inner .form-group input[type="submit"] {
 
 .recipeName {
   text-align: center;
+  padding-top: 40px;
+  padding-bottom: 10px;
 }
 
 .recipeNameSize{
@@ -335,6 +337,10 @@ a.nav.item:hover {
 
 .link {
   font-size: 2em;
+}
+
+.lhsRecipe {
+  padding-left: 30px;
 }
 
 
